hydroflow/tests/compile-fail/surface_singleton_undefined.stderr
error: Cannot find referenced name `unknown`; name was never assigned.
 --> tests/compile-fail/surface_singleton_undefined.rs:4:41
  |
4 |             -> filter(|value| value <= #unknown.as_reveal_ref())
  |                                         ^^^^^^^
